--- a/LogicalProgram.csproj
+++ b/LogicalProgram.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CouponNumber.cs" />
     <Compile Include="FibonacciSeries.cs" />
+    <Compile Include="PerfectNo.cs" />
+    <Compile Include="PrimeNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
